--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "redux": "^4.0.5"
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
